--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/mike_1.jpg" alt="" />
+										<img src="images/star.jpg" alt="" />
 									</span>
 								</section>
 
@@ -105,19 +105,19 @@
 											</ul>
 										</article>
 										<article>
-											<a href="https://michaelteye.github.io/movie_booking_site.github.io/" class="image"><img src="images/moviesbooking.png" alt="" /></a>
-											<h3>movie booking site</h3>
-											<p><strong>html,css and Javascript</strong>The platform  allows users to pick a movie, select a seat, and tell the user the price of the seat</p>
+											<a href="https://mike-s-blog-ab1d4.firebaseapp.com/" class="image"><img src="images/myblog.png" alt="" /></a>
+											<h3>Blogging Site</h3>
+											<p><strong>Vue.js and Firebase: </strong>A platform that allows you to share information about your business and its services but it also allows you to share opinions and thoughts on certain topics. Blogging is a great way to create a personality for your company and makes your business more credible approachable</p>
 											<ul class="actions">
-												<li><a href="https://michaelteye.github.io/movie_booking_site.github.io/" class="button">More</a></li>
+												<li><a href="https://mike-s-blog-ab1d4.firebaseapp.com/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://michaelteye.github.io/Loan-Calculator.github.io/" class="image"><img src="images/loan calculator.png" alt="" /></a>
+											<a href="https://vue-firebase-site-2a446.web.app/chatroom" class="image"><img src="images/chat1.png" alt="" /></a>
 											<h3>Loan Calculator</h3>
-											<p><strong>html,css and Javascript.</strong> An application that allows debtors to input their loan amount and interest on the amount, the application performs the calculation and provides the year for the user to repay the money</p>
+											<p><strong>Vue.js and Firebase: </strong> A platform that enables users to instant message and connects through their computers or mobile devices,</p>
 											<ul class="actions">
-												<li><a href="https://michaelteye.github.io/Loan-Calculator.github.io/" class="button">More</a></li>
+												<li><a href="https://vue-firebase-site-2a446.web.app/chatroom" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
