--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/main_mike.jpg" alt="" />
+										<img src="images/star.jpg"  alt="" />
 									</span>
 								</section>
 
