--- a/about.html
+++ b/about.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Michael Teye Portfolio-MichaelCreativeContent</title>
@@ -114,7 +110,7 @@
 										</article>
 										<article>
 											<a href="https://vue-firebase-site-2a446.web.app/chatroom" class="image"><img src="images/chat1.png" alt="" /></a>
-											<h3>Loan Calculator</h3>
+											<h3>Chat App</h3>
 											<p><strong>Vue.js and Firebase: </strong> A platform that enables users to instant message and connects through their computers or mobile devices,</p>
 											<ul class="actions">
 												<li><a href="https://vue-firebase-site-2a446.web.app/chatroom" class="button">More</a></li>
