--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<article>
 											<a href="https://companytracker.netlify.app/" class="image"><img src="images/companytracker.png" alt="" /></a>
 											<h3>Company Tracker App</h3>
-											<p><strong>Node.js, Express.js & CSS</strong> Web application where you search for Tech companies including Google,Amazon and Meta and get information about their locations and more</p>
+											<p><strong>Node.js, Express.js & CSS.</strong> A Web application where you search big Tech companies including Google, Amazon and, Meta and information about their locations and more</p>
 											<ul class="actions">
 												<li><a href="https://companytracker.netlify.app/" class="button">More</a></li>
 											</ul>
@@ -92,7 +92,7 @@
 										<article>
 											<a href="https://www.internsgh.com/" class="image"><img src="images/internsgh (2).png" alt="" /></a>
 											<h3>Internship</h3>
-											<p><strong>php,MariaDB,html and css</strong>Web application that allow to search for companies ready to provide internship opportunities</p>
+											<p><strong>php,MariaDB,html and css.</strong>A Web application that allows students to search for companies ready to offer internship opportunities</p>
 											<ul class="actions">
 												<li><a href="https://www.internsgh.com/" class="button">More</a></li>
 											</ul>
@@ -100,31 +100,31 @@
 										<article>
 											<a href="https://michaelteye.github.io/WeatherInfo.github.io/" class="image"><img src="images/weather.png" alt="" /></a>
 											<h3>Weather Application</h3>
-											<p><strong>html,css and Javascript</strong> A simple weather application that takes in the name of your city, provides the temperature and wind speed of the input city</p>
+											<p><strong>html,css and Javascript</strong> A simple weather application that takes in the name of a city and provides the temperature and wind speed of the  city</p>
 											<ul class="actions">
 												<li><a href="https://michaelteye.github.io/WeatherInfo.github.io/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://michaelteye.github.io/movie_booking_site.github.io/" class="image"><img src="images/moviesbooking.png" alt="" /></a>
-											<h3>movie booking site</h3>
-											<p><strong>html,css and Javascript</strong>Platform that allows users to pick a movie, select the a seat and tell the user the price of the seat</p>
+											<a href="https://mike-s-blog-ab1d4.firebaseapp.com/" class="image"><img src="images/myblog.png" alt="" /></a>
+											<h3>Blogging Site</h3>
+											<p><strong>Vue.js and Firebase: </strong>A platform that allows you to share information about your business and its services but it also allows you to share opinions and thoughts on certain topics. Blogging is a great way to create a personality for your company and makes your business more credible approachable</p>
 											<ul class="actions">
-												<li><a href="https://michaelteye.github.io/movie_booking_site.github.io/" class="button">More</a></li>
+												<li><a href="https://mike-s-blog-ab1d4.firebaseapp.com/" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="https://michaelteye.github.io/Loan-Calculator.github.io/" class="image"><img src="images/loan calculator.png" alt="" /></a>
-											<h3>Loan Calculator</h3>
-											<p><strong>html,css and Javascript.</strong> An application that allow debtors to input their loan amount and interest on the amount, and the application provides the year for the user to repay the money</p>
+											<a href="https://vue-firebase-site-2a446.web.app/chatroom" class="image"><img src="images/chat1.png" alt="" /></a>
+											<h3>Chat App</h3>
+											<p><strong>Vue.js and Firebase: </strong> A platform that enables users to instant message and connects through their computers or mobile devices,</p>
 											<ul class="actions">
-												<li><a href="https://michaelteye.github.io/Loan-Calculator.github.io/" class="button">More</a></li>
+												<li><a href="https://vue-firebase-site-2a446.web.app/chatroom" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
 											<a href="https://michaelteye.github.io/Currency-Convector.github.io/" class="image"><img src="images/currencyConvertor.png" alt="" /></a>
 											<h3>Currency Convector</h3>
-											<p><strong>html,css and Javascript.</strong>	With Currency Exchanger, users can swaps  one local Currency to another</p>
+											<p><strong>html,css and Javascript.</strong>With Currency Exchanger, users can swap one local Currency with another.</p>
 											<ul class="actions">
 												<li><a href="https://michaelteye.github.io/Currency-Convector.github.io/" class="button">More</a></li>
 											</ul>
